# ECL-projects

./: Intro.ipynb  README.md  pyproject.toml
Analyse_Numerique/: Cours1.m  Cours2.m  Cours5.m  Cours6.m  TD2_AN.asv  TD2_AN.m  TD3_AN.m  TD4_AN.asv  TD5_AN.m  TD5_test_AN.m  TD6_AN.asv  TD6_AN.m  TD7_AN.m  TD7_ANrendu.m
CAN/: CANuniforme.mlx  Extrait_2.mat
CAN/BE1/: CANuniforme_MARCON_FRELECHOUX.mlx  Extrait_3.mat  Sinus.mat
CAN/BE2/: CANSurechantillonnage.m  CAN_BE2.mlx  CAN_BE2_C1A2_MARCON_FRELECHOUX.mlx  glock.mat  (+5 more)
Matlab/: Assemblage.mlx  CM3_intro.mlx  PojetMath.asv  PojetMath.m  Projet_Maths.asv  Projet_Maths.mlx  Simulation_uniforme_disque.mlx  TD1_AN.asv  TD1_AN.m  TD5_AnalyseSpectrale.m  TD5_InterpolationTFD.m  maximum.m  produitetsomme.m
Proba/: MARCON_PIARRON-LUTZ.mlx  TC1_stat.m
Projet_Maths/: PojetMath.m  ProjetMath2.m  ProjetMath3.m  Projet_Maths.asv  Projet_Maths.mlx
Stat/: MARCON.mlx  TD2_stat.m  TD3_stat.m  climat_CO2.txt  noix.txt
TC1/: Intro.ipynb  pyproject.toml  racines.py
TC1/TD1/: Intro.ipynb  utiliser_racines.py
TC1/TD2/: INF-TC1-td02.ipynb  etudiants-large100.txt  etudiants.txt
TC1/TD3/: INF-TC1-td03.ipynb
TC1/TD4/: images.ipynb
TC1/TD5/: INF-TC1-td05.ipynb  TD5.ipynb
TC1/TD5/.ipynb_checkpoints/: TD5-checkpoint.ipynb
TC1/TD6/: INF-TC1-td06.ipynb  mots-10.txt  mots-100.txt
TC1/TD7/: INF-TC1-td07-sol.ipynb  INF-TC1-td07bis.ipynb  marcon-inf-tc1-td7.ipynb
TC2/: bibliotheque.py  emprunt.py  forme.py  formes.py  lecteur.py  livre.py  personne.py  test_bibliotheque.py  test_formes.py  test_livre.py  test_personne.py
(+181 files in other folders)
