[tool.poetry]
name = "ecl"
version = "0.1.0"
description = ""
authors = ["Adèle Marcon <adele.marcon@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.2"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
